# glog_segment

./: CMakeLists.txt  custom_glog_sink.cc  custom_glog_sink.h  custom_glog_sink_test.cc  glog_segment.cc  glog_segment.h  main.cc
